src/objects/QPMS__Complaint_Approver__c.object
<CustomObject>
    <description>This is used to save complaint approvers information.</description>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>This field is used for saving Allowed days field</description>
        <label>Allowed Days</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process__c</fullName>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Regulatory Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_Name__c</fullName>
        <formula>QPMS__User__r.LastName  &amp; &quot;, &quot; &amp; QPMS__User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Comments__c</fullName>
        <description>this field is for to capture approval history</description>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_GT__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This fied is used for saving Complaint General Task Id</description>
        <label>Complaint General Task</label>
        <referenceTo>QPMS__Complaint_General_Task__c</referenceTo>
        <relationshipLabel>Complaint Approvers</relationshipLabel>
        <relationshipName>Complaint_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for saveing Complaint Id</description>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Complaint Approvers</relationshipLabel>
        <relationshipName>Complaint_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Customer_Experience_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Experience Type</label>
        <referenceTo>QPMS__Customer_Experience_Type__c</referenceTo>
        <relationshipLabel>Complaint Approvers</relationshipLabel>
        <relationshipName>Complaint_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>This field is used for saving Date</description>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of Approver, Used for notification through email alert</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaint_Approvers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of Approver, Used for notification through email alert</description>
        <label>Parent Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaint_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__RegReport_Complaint_Id__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <label>RegReport Complaint Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__RegReport_FollowUpNumber__c</fullName>
        <formula>TEXT( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>RegReport FollowUpNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__RegReport_Reg_Body__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <label>RegReport Reg Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assesment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Assessment</label>
        <referenceTo>QPMS__Regulatory_Assesment__c</referenceTo>
        <relationshipLabel>Complaint Approvers (Regulatory Assessment)</relationshipLabel>
        <relationshipName>Complaint_Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assessment_Complaint_Id__c</fullName>
        <formula>QPMS__Regulatory_Assesment__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Assessment Complaint Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assessment_Regulatory_Body__c</fullName>
        <formula>TEXT(QPMS__Regulatory_Assesment__r.QPMS__Regulatory_Body__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Assessment Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Complaint Approvers</relationshipLabel>
        <relationshipName>Complaint_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <description>This field is used for saving sequence position value</description>
        <label>Sequence Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Status_Updated__c</fullName>
        <description>This field is used for saving Date value after approval</description>
        <label>Status Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used for saving Status Field</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Task__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for saving approver id</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaint_Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Complaint Approver</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Complaint Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>